# bgone

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
Formula/: bgone.rb
src/: background.rs  color.rs  deduce.rs  lib.rs  main.rs  testing.rs  unmix.rs
tests/: color_deduction_tests.rs  generate_fixtures.rs  generate_inputs.rs  gradient_stroke_comparison_tests.rs  integration_test.rs  non_strict_tests.rs  square_gradient_stroke_tests.rs  strict_tests.rs  translucent_recovery_tests.rs
tests/common/: mod.rs
