[package]
name = "bgone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
nalgebra = "0.34"
anyhow = "1.0"
indicatif = { version = "0.18", features = ["rayon"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
approx = "0.5"
